[gd_scene load_steps=7 format=2]

[ext_resource path="res://PersonScene.gd" type="Script" id=1]
[ext_resource path="res://ranking.png" type="Texture" id=2]
[ext_resource path="res://CombinationItem.tscn" type="PackedScene" id=3]
[ext_resource path="res://CombinationItemList.tscn" type="PackedScene" id=4]
[ext_resource path="res://chocolate.png" type="Texture" id=5]
[ext_resource path="res://candy.png" type="Texture" id=6]

[node name="PersonScene" type="Node2D"]
script = ExtResource( 1 )

[node name="BestCombination" type="Control" parent="."]
margin_left = 280.0
margin_top = 216.0
margin_right = 464.0
margin_bottom = 408.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelBestCombination" type="Label" parent="BestCombination"]
margin_left = 8.0
margin_top = 16.0
margin_right = 160.0
margin_bottom = 32.0
text = "LabelBestCombination"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelSatisfaction" type="Label" parent="BestCombination"]
margin_left = 8.0
margin_top = 48.0
margin_right = 120.0
margin_bottom = 64.0
text = "LabelSatisfaction"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelCost" type="Label" parent="BestCombination"]
margin_left = 8.0
margin_top = 32.0
margin_right = 80.0
margin_bottom = 48.0
text = "LabelCost"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelTitle" type="Label" parent="BestCombination"]
margin_right = 120.0
margin_bottom = 16.0
text = "Best combination"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CombinationItem" parent="BestCombination" instance=ExtResource( 3 )]
margin_left = 16.0
margin_top = 72.0
margin_right = 64.0
margin_bottom = 224.0

[node name="Trade" type="Control" parent="."]
margin_left = 272.0
margin_top = 16.0
margin_right = 576.0
margin_bottom = 288.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelTrade" type="Label" parent="Trade"]
margin_left = 8.0
margin_top = 16.0
margin_right = 80.0
margin_bottom = 32.0
text = "LabelTrade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelTitle" type="Label" parent="Trade"]
margin_right = 40.0
margin_bottom = 16.0
text = "Trade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelBuyingGoods" type="Label" parent="Trade"]
visible = false
margin_left = 248.0
margin_top = 192.0
margin_right = 368.0
margin_bottom = 208.0
text = "LabelBuyingGoods"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelSellingGoods" type="Label" parent="Trade"]
visible = false
margin_left = 248.0
margin_top = 288.0
margin_right = 408.0
margin_bottom = 302.0
text = "LabelSellingGoods"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CombinationItemBuyingGoods" parent="Trade" instance=ExtResource( 3 )]
visible = false
margin_left = 424.0
margin_top = 216.0
margin_right = 448.0
margin_bottom = 296.0

[node name="CombinationItemSellingGoods" parent="Trade" instance=ExtResource( 3 )]
visible = false
margin_left = 432.0
margin_top = 320.0
margin_right = 456.0
margin_bottom = 392.0

[node name="ItemListBuyingGoods" type="ItemList" parent="Trade"]
visible = false
margin_left = 248.0
margin_top = 216.0
margin_right = 416.0
margin_bottom = 272.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemListSellingGoods" type="ItemList" parent="Trade"]
visible = false
margin_left = 248.0
margin_top = 312.0
margin_right = 416.0
margin_bottom = 368.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Polygon2DBuying" type="Polygon2D" parent="Trade"]
position = Vector2( -16, 64 )
polygon = PoolVector2Array( -8, 8, 24, 40, 24, 16, 80, 16, 80, 0, 24, 0, 24, -24 )

[node name="Polygon2DSelling" type="Polygon2D" parent="Trade"]
position = Vector2( 136, 144 )
scale = Vector2( -1, 1 )
polygon = PoolVector2Array( -8, 8, 24, 40, 24, 16, 80, 16, 80, 8, 80, 0, 24, 0, 24, -24 )

[node name="chocolateBuying" type="Sprite" parent="Trade"]
position = Vector2( 120, 96 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="chocolateSelling" type="Sprite" parent="Trade"]
position = Vector2( 24, 168 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="candyBuying" type="Sprite" parent="Trade"]
position = Vector2( 120, 56 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="candySelling" type="Sprite" parent="Trade"]
position = Vector2( 24, 136 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="LabelCandyBuying" type="Label" parent="Trade"]
margin_left = 80.0
margin_top = 48.0
margin_right = 96.0
margin_bottom = 64.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelCandySelling" type="Label" parent="Trade"]
margin_left = -16.0
margin_top = 128.0
margin_bottom = 144.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelChocolateBuying" type="Label" parent="Trade"]
margin_left = 80.0
margin_top = 80.0
margin_right = 96.0
margin_bottom = 96.0
text = "0"

[node name="LabelChocolateSelling" type="Label" parent="Trade"]
margin_left = -16.0
margin_top = 160.0
margin_bottom = 176.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RankingOfPreferences" type="Control" parent="."]
margin_left = 8.0
margin_top = 200.0
margin_right = 264.0
margin_bottom = 512.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CombinationSatisfaction" parent="RankingOfPreferences" instance=ExtResource( 4 )]
position = Vector2( 0, 16 )

[node name="LabelTitle" type="Label" parent="RankingOfPreferences"]
margin_right = 152.0
margin_bottom = 16.0
text = "Ranking of preferences"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OwnedItems" type="Control" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 264.0
margin_bottom = 224.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelValueOfOwned" type="Label" parent="OwnedItems"]
margin_left = 8.0
margin_top = 16.0
margin_right = 144.0
margin_bottom = 32.0
text = "LabelValueOfOwned"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelSatisfaction" type="Label" parent="OwnedItems"]
margin_left = 8.0
margin_top = 32.0
margin_right = 120.0
margin_bottom = 48.0
text = "LabelSatisfaction"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelTitle" type="Label" parent="OwnedItems"]
margin_right = 96.0
margin_bottom = 16.0
text = "Owned items"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CombinationItem" parent="OwnedItems" instance=ExtResource( 3 )]
margin_left = 8.0
margin_top = 48.0
margin_right = 112.0
margin_bottom = 168.0

[node name="CandyAmount" type="SpinBox" parent="OwnedItems"]
margin_left = 128.0
margin_top = 56.0
margin_right = 202.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChocolateAmount" type="SpinBox" parent="OwnedItems"]
margin_left = 128.0
margin_top = 88.0
margin_right = 202.0
margin_bottom = 112.0

[node name="ShowInfoRanking" type="TextureButton" parent="."]
margin_left = 144.0
margin_top = 152.0
margin_right = 184.0
margin_bottom = 192.0
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="OwnedItems/CandyAmount" to="." method="_on_CandyAmount_value_changed"]
[connection signal="value_changed" from="OwnedItems/ChocolateAmount" to="." method="_on_ChocolateAmount_value_changed"]
[connection signal="pressed" from="ShowInfoRanking" to="." method="_on_ShowInfoRanking_pressed"]
